@@ -1,8 +1,10 @@
-log4j.appender.SquirrelAppender=net.sourceforge.squirrel_sql.client.SquirrelAppender
-log4j.appender.SquirrelAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.SquirrelAppender.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
-log4j.appender.SquirrelAppender.DatePattern='.'yyyy-ww
-
 log4j.rootLogger=info, SquirrelAppender
+log4j.appender.SquirrelAppender=net.sourceforge.squirrel_sql.client.SquirrelFileSizeRollingAppender
+log4j.appender.SquirrelAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.SquirrelAppender.layout.ConversionPattern=%d{ISO8601} [%t] %-5p %c %x - %m%n
+
+
+
+
 
 
